--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.1",
     "@rollup/plugin-babel": "^6.1.0",
     "@rollup/plugin-commonjs": "^29.0.0",
@@ -42,7 +45,7 @@
     "postcss": "^8.5.6",
     "rollup": "^4.54.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "vite": "^7.2.4",
-    "tailwindcss": "^3.4.19"
+    "tailwindcss": "^3.4.19",
+    "vite": "^7.2.4"
   }
 }
