--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/phamlinh98/react-morp-ui.git"
+  },
   "sideEffects": false,
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
