--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@phamlinh98/react-morp-ui",
   "version": "0.1.13",
   "description": "Modern React UI components built with TailwindCSS",
+  "license": "MIT",
   "type": "module",
   "main": "dist/index.cjs.js",
   "style": "dist/style.css",
