fix: correct build script configuration in package.json

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "build:css": "tailwindcss -i ./src/styles.css -o ./dist/style.css --minify",
-    "build": "npm run build:css && rollup -c",
-    "build-sc":"npm run build",
+    "build-lib": "npm run build:css && rollup -c",
+    "build-sc": "npm run build",
     "build:demo": "vite build --config vite.demo.config.js"
   },
   "peerDependencies": {
